# wyngman

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aws_arg_parser.py  cognito.py  constants.py  main.py  parser.py  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini  utils.py
scratchpad/: cred.txt
tests/: .cognito_test.py.swo  .coverage  cli_test.py  cognito_test.py  cognito_test.py~  configure_test.py  main_test.py
tests/data/: user_data.py
tests/utils/: configure.py
wyngman/: aws_arg_parser.py  cognito.py  constants.py  main.py  requirements.txt  utils.py
wyngman2/: main.py
