[metadata]
name = aws-helper 
version = 0.0.1 
description = A tool to interact with AWS Services 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Razin-Tailor/aws_helper
author = Razin Tailor
author_email = razintailorpy@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pandas
    virtualenv>=20.0.8
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.7"
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*
    venv*

[options.entry_points]
console_scripts =
    aws-helper = aws_helper.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
; omit = pre_commit/resources/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false